# coffee-shop

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
db/: init.sql
db/data/: customer.csv
src/: db.py  main.py
src/app/: main.py
src/routers/: api.py  customer.py  health.py  helpers.py  index.py
src/schemas/: customer.py
tests/unit/routers/: test_api.py  test_customer.py  test_health.py  test_index.py
tests/unit/schemas/: test_customer.py
