[tool.poetry]
name = "coffee-shop"
version = "0.1.0"
description = "Data Analysis Web Service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "coffee_shop"}]

[tool.black]
target-version = ['py310']
max-line-length = 88

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.3.0"}
pytest = "^7.3.1"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
